add: videos directamente de youtube
- Cambio "a sky full of stars" por "The Night We Met"
- Motivo: el autor desabilito el video de "a sky full of stars" para reproducirse en otros sitios web

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
         <div class="container-lum">
             <img src="./madii&yoV2.com.jpg" alt="" class="bori"/>
             <img src="./vecteezy_black-heart-line-png-file_20945974_746.png" alt="" class="love"/>
-            <video width="400px" height="400px" controls="controls">
-            <source src="./A Sky Full of Stars.mp4" type="video/mp4" />
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/g4ZmSLgjL44?si=NL-D9Sie8JEtKmw9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div class="container-lum">
             <p>
@@ -84,8 +83,7 @@
                 Juega y sigue desplazándote amor. Te espera una sorpresa....
             </p>
             <div>
-                <video width="400px" height="250px" controls="controls">
-                <source src="./Iris.mp4" type="video/mp4" />
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/yXElRn0UD_I?si=YBQVpOY2VXsopgDn&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <p>
                 Iris - Goo Goo Dolls
